--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
   <div class="container">
 
- <img src="assets/images/image-omelette.jpeg">
+ <img src="image-omelette.jpeg">
 
  <h1>Simple Omelette Recipe</h1>  
 
